# geteverything

./: .bazelignore  .dockerignore  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  README.md  db.sqlite3  manage.py  post_test.http  purgemigration.sh  pyproject.toml  pythonversion.sh  requirements.txt  test.py
.github/workflows/: crawler-deploy.yaml  deploy.yaml  test.yml
admin/: BUILD.bazel  admin.env.sh  manage.py
admin/admin/: BUILD.bazel  __init__.py  settings.py
crawlers/: .gitignore  Dockerfile.template  django_setup.py  install-browser.sh  requirements.txt  run_queue.py  samconfig.toml  template.yaml
crawlers/arca/: BUILD.bazel  __init__.py
crawlers/arca/crawler/: crawler.py
crawlers/arca/item/: __init__.py  item.py
crawlers/arca/pipeline/: __init__.py  item_pipeline.py
crawlers/arca/spider/: __init__.py  spider.py
crawlers/coolnjoy/: BUILD.bazel  __init__.py  crawler.py  item.py  item_pipeline.py  requirements.txt  spider.py
crawlers/coolnjoy/crawler/: crawler.py
crawlers/eomisae/crawler/: crawler.py
crawlers/eomisae/item/: item.py
crawlers/eomisae/pipeline/: item_pipeline.py
crawlers/eomisae/spider/: spider.py
crawlers/fmkorea/: BUILD.bazel  Dockerfile  app.py  install-browser.sh  requirements.txt
crawlers/fmkorea/crawler/: crawler.py  crawlertest.py
crawlers/fmkorea/item/: __init__.py  item.py
crawlers/fmkorea/middlewares/: __init__.py  selenium_middleware.py
crawlers/fmkorea/pipeline/: __init__.py  item_pipeline.py
crawlers/fmkorea/spider/: __init__.py  spider.py
crawlers/hello_world/: Dockerfile  Dockerfile.back  app.py  chrome-deps.txt  requirements.txt
crawlers/middlewares/: __init__.py  flare_solver_middleware.py  selenium_middleware.py
crawlers/ppomppu/: BUILD.bazel  __init__.py  app.py  requirements.txt
crawlers/ppomppu/crawler/: crawler.py
crawlers/ppomppu/item/: __init__.py  item.py
crawlers/ppomppu/pipeline/: __init__.py  item_pipeline.py
crawlers/ppomppu/spider/: __init__.py  spider.py
crawlers/utils/: shop_parse.py
gadmin/: BUILD.bazel  manage.py  summernote_appconfig.py  uwsgi.ini  uwsgi.ini.template
gadmin/admin/: BUILD.bazel  settings.py  urls.py
gadmin/coolnjoy/: BUILD.bazel  admin.py  apps.py  models.py
gadmin/coolnjoy/migrations/: 0001_initial.py  0002_remove_coolnjoydeal_title_coolnjoydeal_a_link_and_more.py  0003_coolnjoydeal_cool_n_joy_id_and_more.py  0004_alter_coolnjoydeal_crawled_at_and_more.py  0005_alter_coolnjoydeal_crawled_at_and_more.py  0006_alter_coolnjoydeal_crawled_at_and_more.py  0007_alter_coolnjoydeal_crawled_at_and_more.py  0008_alter_coolnjoydeal_crawled_at_and_more.py  0009_alter_coolnjoydeal_crawled_at_and_more.py  0010_alter_coolnjoydeal_crawled_at_and_more.py
gadmin/deals/: admin.py  apps.py  export_filelds_action_form.py  models.py  serializer.py  urls.py  views.py
gadmin/deals/migrations/: 0001_initial.py  0002_alter_deal_article_id_alter_deal_crawled_at_and_more.py  0003_alter_deal_crawled_at_alter_deal_create_at_and_more.py  0004_deal_currency.py  0005_deal_write_at_alter_deal_create_at.py  0006_trgm_hash_vector.py  0007_deal_subject_trgm_vector_and_more.py
gadmin/favorite/: apps.py
gadmin/favorite_deal/: apps.py  models.py  views.py
gadmin/favorite_deal/migrations/: 0001_initial.py
gadmin/forum/: admin.py  apps.py  urls.py  views.py
gadmin/forum/migrations/: 0001_initial.py  0002_post_is_delete_post_is_hidden.py  0003_alter_comment_parent.py  0004_alter_post_post_type.py
gadmin/forum/models/: post.py
gadmin/ppomppu/: BUILD.bazel  admin.py  apps.py  models.py
gadmin/ppomppu/migrations/: 0001_initial.py  0002_remove_ppomppudeal_a_link_remove_ppomppudeal_a_link2_and_more.py  0003_alter_ppomppudeal_content_and_more.py  0004_alter_ppomppudeal_content_and_more.py  0005_alter_ppomppudeal_crawled_at_and_more.py  0006_alter_ppomppudeal_crawled_at_and_more.py  0007_alter_ppomppudeal_crawled_at_and_more.py
gadmin/serializer/: authSerializer.py  comment_serializer.py  kakao_token_serializer.py  post_serializer.py
gadmin/user/: apps.py  models.py  user_authentication.py
gadmin/user/migrations/: 0001_initial.py  0002_user_kakao_id_user_refresh_token_alter_user_provider.py  0003_user_email_user_user_id.py  0004_alter_user_user_id.py  0005_user_access_token_expire_date_and_more.py  0006_alter_user_social_id_alter_user_user_id.py  0007_alter_user_user_id.py  0008_user_is_active_alter_user_user_id.py  0009_user_is_authenticated_alter_user_user_id.py  0010_alter_user_user_id.py  0011_alter_user_user_id.py  0012_alter_user_user_id.py  0013_alter_user_user_id.py  0014_alter_user_user_id.py  0015_alter_user_user_id.py  0016_alter_user_user_id.py  0017_alter_user_user_id.py  0018_alter_user_user_id.py
gadmin/user/views/: kakao_login_api_view.py  kakao_signup_api_view.py  logout_view.py  user_update_view.py
get_everything/: asgi.py  settings.py  urls.py  wsgi.py
geteverything/: apps.py
lambda/: requirements.txt  template.yaml
lambda/coolnjoy/: BUILD.bazel  __init__.py  app.py  crawler.py  item.py  requirements.txt  sample.py  spider.py
lambda/hello_world/: app.py  requirements.txt
