# MODULE.bazel
module(
    name = "geteverything",
    version = "0.1.0",
)


# Python rules
bazel_dep(name = "rules_python", version = "0.33.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")
use_repo(python, "python_3_12")


# Pip Integration
#pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

#pip = use_extension("@rules_python//python:extensions.bzl", "pip")
#pip.parse(
#    hub_name = "pip",
#    requirements_lock = "requirements.txt",
#    python_version="3.11"
#)
#use_repo(pip, "pip")


# Poetry Integration

bazel_dep(name = "ofiuco", version = "0.3.7")

poetry = use_extension("@ofiuco//python:extensions.bzl", "poetry")
poetry.parse(
    name = "poetry",
    lock = "poetry.lock",
)
use_repo(poetry, "poetry")
