[tool.poetry]
name = "geteverything"
version = "0.1.0"
description = ""
authors = ["newdlops <newdlops@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
sqlparse = "0.5.0"
asgiref = "3.8.1"
scrapy = "2.11.2"
psycopg = "^3.2.1"
psycopg2-binary = "^2.9.9"
scrapy-rotating-proxies = "^0.6.2"
rotating-free-proxies = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
